# cumplo-tailor

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.development  Makefile  README.md  credentials.json  docker-compose.yml  main.py  mypy.ini  pyproject.toml  workspace.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
business/channels/: __init__.py
cumplo_tailor/: __init__.py  main.py
cumplo_tailor/business/: __init__.py  channels.py
cumplo_tailor/controllers/: __init__.py  channels.py  users.py
cumplo_tailor/integrations/: __init__.py  cloud_credentials.py
cumplo_tailor/routers/: __init__.py  channels.py  configurations.py  credentials.py  filters.py  subscriptions.py
cumplo_tailor/routers/users/: private.py  public.py
cumplo_tailor/schemas/: configurations.py  filters.py
cumplo_tailor/utils/: constants.py  dictionary.py
models/: configuration.py
routers/: channels.py  configurations.py
utils/: event.py
