[tool.poetry]
name = "cumplo-tailor"
version = "0.2.0"
description = "A configuration service that empowers users to customize their investment preferences and notification settings"
authors = ["Cristobal Sfeir <cnsfeir@uc.cl>"]
packages = [{ include = "cumplo_tailor" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
arrow = "^1.2.3"
pydantic = "^2.1.1"
python-dotenv = "^1.0.0"
google-cloud-logging = "^3.5.0"
fastapi = "^0.109.1"
uvicorn = "^0.23.1"
cumplo-common = { version = "^1.0.4", source = "cumplo-pypi" }

[tool.poetry.dev-dependencies]
pylint = "^2.17.2"
flake8 = "^6.0.0"
black = "^23.3.0"
mypy = "^1.2.0"

[[tool.poetry.source]]
name = "cumplo-pypi"
url = "https://us-central1-python.pkg.dev/cumplo-scraper/cumplo-pypi/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
