[tool.poetry]
name = "cumplo-tailor"
version = "1.1.0"
description = "A configuration service that empowers users to customize their investment preferences and notification settings"
authors = ["Cristobal Sfeir <cnsfeir@uc.cl>"]
packages = [{ include = "cumplo_tailor" }]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.28.1"
arrow = "^1.2.3"
pydantic = "^2.1.1"
python-dotenv = "^1.0.0"
google-cloud-logging = "^3.5.0"
fastapi = "^0.109.1"
uvicorn = "^0.23.1"
google-api-python-client = "^2.158.0"
google-auth = "^2.37.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
cumplo-common = { version = "^1.7.12", source = "cumplo-pypi" }

[tool.poetry.dev-dependencies]
ruff = "^0.7.1"
mypy = "^1.13.0"
docformatter = "^1.7.5"

[[tool.poetry.source]]
name = "cumplo-pypi"
url = "https://us-central1-python.pkg.dev/cumplo-scraper/cumplo-pypi/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
exclude = ".venv"

[[tool.mypy.overrides]]
module = [
    "googleapiclient.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py312"
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101", # Missing type annotation for self in method
    "ANN102", # Missing type annotation for cls in method
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "D100",   # Missing docstring in public module
    "D107",   # Missing docstring in __init__
    "D105",   # Missing docstring in magic method
    "D212",   # Multi-line docstring summary should start at the second line
    "D203",   # One blank line required before class docstring
    "D101",   # Missing docstring in public class
    "D104",   # Missing docstring in public package
    "G004",   # Logging statement uses string formatting
    "S113",   # Use of `requests` call without timeout
    "DOC201", # Missing documentation for `return` in docstring
    "COM812", # Missing trailing comma in a dictionary
    "ISC001", # Implicit string concatenation
    "CPY001", # Copying notice
    "EM102",  # Exception must not use an f-string literal, assign to variable first
    "FIX004", # Line contains HACK
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101", "PLR6301"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120

[tool.docformatter]
pre-summary-newline = true # Ensures that multiline docstrings start on a new line.
wrap-descriptions = 120    # Wraps descriptions at 114 characters, ensuring consistent line width.
wrap-summaries = 120       # Wraps summary lines only if they exceed 114 characters.
recursive = true           # Recursively formats all Python files in the specified directories.
blank = true               # Adds a blank line before the end of multiline docstrings.
